# Experiments

./: README.md  benchmark.py  fjsp_naderi.py  jobscript.py  parse_stats.py  pyproject.toml
configs/cpoptimizer/: first_feasible.toml
configs/ortools/: first_feasible.toml  heuristic.toml
data/: bks.csv  fjsp_naderi.csv  results.csv  stats.csv
data/bks/: J120_0.csv  J30.csv  J60_1.csv  J90_3.csv  MM100_0.csv  MM50_0.csv  README.md  RG300_0.csv  Results_22_9_2021.xlsx
data/instances/: README.md
data/instances/RCPSP/: J120_1.txt  J120_10.txt  J120_100.txt  J120_101.txt  J120_102.txt  J120_103.txt  J120_104.txt  J120_105.txt  J120_106.txt  J120_107.txt  J120_108.txt  J120_109.txt  J120_11.txt  J120_110.txt  J120_111.txt  J120_112.txt  J120_113.txt  J120_114.txt  J120_115.txt  J120_116.txt  J120_117.txt  J120_118.txt  J120_119.txt  J120_12.txt  J120_120.txt  J120_121.txt  J120_122.txt  J120_123.txt  J120_124.txt  J120_125.txt  J120_126.txt  J120_127.txt  J120_128.txt  J120_129.txt  J120_13.txt  J120_130.txt  J120_131.txt  J120_132.txt  J120_133.txt  J120_134.txt  (+2480 more)
notebooks/: analysis.ipynb  parse_bks.ipynb  parse_results.ipynb
pyjobshop/: constants.py
pyjobshop/pyjobshop/: Model.py  ProblemData.py
pyjobshop/pyjobshop/solvers/cpoptimizer/: Constraints.py
pyjobshop/pyjobshop/solvers/ortools/: Constraints.py
pyjobshop/solvers/ortools/: Constraints.py
read/: Problem.py  __init__.py  machine.py  project.py  read.py
