[project]
name = "experiments"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.2.5",
    "numpy>=1.26.4",
    "pyjobshop[docplex]",
]

[tool.uv]
package = false

[tool.uv.sources]
pyjobshop = { git = "https://github.com/PyJobShop/PyJobShop", branch = "same-sequence" }
