[project]
name = "experiments"
version = "0.1.0"
description = "Experiments for the PyJobShop paper submission."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.2.5",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pyjobshop[docplex]",
]

[tool.uv]
package = false

[tool.uv.sources]
pyjobshop = { path = "./pyjobshop" }
